--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -42,6 +42,10 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="TextView.Pretendard.SemiBold.20" parent="TextView.Pretendard.SemiBold">
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="TextView.Pretendard.Bold" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textColor">@color/black</item>
