--- a/android/app/src/main/res/layout/fragment_my_stats.xml
+++ b/android/app/src/main/res/layout/fragment_my_stats.xml
@@ -17,7 +17,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_my_stats"
@@ -49,20 +50,20 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_my_chart_title" />
 
-            <TextView
-                android:id="@+id/tv_winning_percentage"
-                style="@style/TextView.Pretendard.Bold.40"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="@{@string/stats_percentage(myStatsUiModel.winningPercentage)}"
-                android:textColor="@color/primary500"
-                app:layout_constraintBottom_toTopOf="@id/tv_total_attendance_count"
-                app:layout_constraintEnd_toEndOf="@id/pie_chart"
-                app:layout_constraintStart_toStartOf="@id/pie_chart"
-                app:layout_constraintTop_toTopOf="@id/pie_chart"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="58%" />
+                <TextView
+                    android:id="@+id/tv_winning_percentage"
+                    style="@style/TextView.Pretendard.Bold.40"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:text="@{@string/stats_percentage(myStatsUiModel.winningPercentage)}"
+                    android:textColor="@color/primary500"
+                    app:layout_constraintBottom_toTopOf="@id/tv_total_attendance_count"
+                    app:layout_constraintEnd_toEndOf="@id/pie_chart"
+                    app:layout_constraintStart_toStartOf="@id/pie_chart"
+                    app:layout_constraintTop_toTopOf="@id/pie_chart"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="58%" />
 
                 <TextView
                     android:id="@+id/tv_total_attendance_count"
@@ -186,6 +187,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/bg_white_radius_12dp"
+                android:paddingVertical="20dp"
                 app:layout_constraintEnd_toStartOf="@id/constraint_lucky_stadium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/constraint_my_stats">
@@ -194,7 +196,6 @@
                     android:id="@+id/tv_my_team_emoji"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:text="@string/stats_my_team_emoji"
                     android:textSize="28sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -218,7 +219,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:layout_marginBottom="20dp"
                     android:text="@string/stats_my_team"
                     android:textColor="@color/gray500"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -234,6 +234,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/bg_white_radius_12dp"
+                android:paddingVertical="20dp"
                 app:layout_constraintBottom_toBottomOf="@id/constraint_my_team"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/constraint_my_team"
@@ -244,7 +245,6 @@
                     android:id="@+id/tv_lucky_stadium_emoji"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:text="@string/stats_my_lucky_stadium_emoji"
                     android:textSize="28sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -257,7 +257,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@{myStatsUiModel.luckyStadium}"
+                    android:text="@{myStatsUiModel.luckyStadium != null ? myStatsUiModel.luckyStadium : @string/stats_my_no_lucky_stadium}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_emoji"
@@ -268,7 +268,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:layout_marginBottom="20dp"
                     android:text="@string/stats_my_lucky_stadium"
                     android:textColor="@color/gray500"
                     app:layout_constraintBottom_toBottomOf="parent"
