feat: 구장 통계 API 응답에 구장 이름 추가

--- a/android/app/src/main/res/layout/fragment_stadium_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stadium_stats.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="stadiumStatsUiModel"
-            type="com.yagubogu.presentation.stats.stadium.StadiumStatsUiModel" />
+            type="com.yagubogu.presentation.stats.stadium.model.StadiumStatsUiModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
