--- a/android/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/android/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,9 +9,9 @@
         android:icon="@drawable/ic_stats"
         android:title="@string/bottom_navigation_stats" />
     <item
-        android:id="@+id/item_record"
-        android:icon="@drawable/ic_record"
-        android:title="@string/bottom_navigation_record" />
+        android:id="@+id/item_chat"
+        android:icon="@drawable/ic_chat"
+        android:title="@string/bottom_navigation_chat" />
     <item
         android:id="@+id/item_challenge"
         android:icon="@drawable/ic_challenge"
