--- a/android/app/src/main/res/layout/fragment_stadium_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stadium_stats.xml
@@ -54,7 +54,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="85dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +82,7 @@
                     tools:backgroundTint="@color/team_kiwoom"
                     tools:layout_constraintWidth_percent="0.7" />
 
+
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline_split"
                     android:layout_width="wrap_content"
@@ -90,14 +91,35 @@
                     app:setConstraintGuidePercent="@{stadiumStatsUiModel.firstTeamBias}"
                     tools:layout_constraintGuide_percent="0.3" />
 
+                <View
+                    android:id="@+id/left_divider_background"
+                    android:layout_width="28dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:translationX="-4dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/triangle_right"
+                    app:layout_constraintStart_toStartOf="@id/triangle_left"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/right_divider_background"
+                    android:layout_width="28dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:translationX="4dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/triangle_right"
+                    app:layout_constraintStart_toStartOf="@id/triangle_left"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:id="@+id/triangle_left"
-                    android:layout_width="15dp"
+                    android:layout_width="28dp"
                     android:layout_height="match_parent"
-                    android:elevation="4dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/chart_divider_triangle_left"
-                    android:translationX="-2dp"
+                    android:translationX="-4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/guideline_split"
                     app:layout_constraintStart_toStartOf="@id/guideline_split"
@@ -107,12 +129,11 @@
 
                 <ImageView
                     android:id="@+id/triangle_right"
-                    android:layout_width="15dp"
+                    android:layout_width="28dp"
                     android:layout_height="match_parent"
-                    android:elevation="4dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/chart_divider_triangle_right"
-                    android:translationX="2dp"
+                    android:translationX="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/guideline_split"
                     app:layout_constraintStart_toStartOf="@id/guideline_split"
@@ -120,16 +141,20 @@
                     app:setCustomChartDividerTint="@{stadiumStatsUiModel.secondTeamStatus.teamColor}"
                     tools:tint="@color/team_kiwoom" />
 
+
                 <TextView
                     android:id="@+id/tv_vs"
-                    style="@style/TextView.Pretendard.Bold.20"
+                    style="@style/TextView.Pretendard.Bold.16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/bg_white_radius_100dp"
                     android:elevation="8dp"
-                    android:letterSpacing="-0.1"
+                    android:includeFontPadding="false"
+                    android:paddingVertical="4dp"
                     android:text="VS"
-                    android:textColor="@android:color/white"
-                    android:translationX="-0.5dp"
+                    android:textColor="@color/gray700"
+                    android:textSize="20sp"
+                    android:paddingHorizontal="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/guideline_split"
                     app:layout_constraintStart_toStartOf="@id/guideline_split"
@@ -137,16 +162,17 @@
 
                 <TextView
                     android:id="@+id/tv_first_team_name"
-                    style="@style/TextView.Pretendard.Bold.20"
+                    style="@style/TextView.Esamanru.Bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="6dp"
+                    android:layout_marginStart="20dp"
                     android:elevation="8dp"
                     android:includeFontPadding="false"
-                    android:textColor="@android:color/white"
                     android:text="@{stadiumStatsUiModel.firstTeamStatus.teamName}"
+                    android:textColor="@android:color/white"
+                    android:textSize="22sp"
                     app:layout_constraintBottom_toTopOf="@id/tv_first_team_percent"
-                    app:layout_constraintEnd_toStartOf="@+id/guideline_split"
+
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_chainStyle="packed"
@@ -154,15 +180,15 @@
 
                 <TextView
                     android:id="@+id/tv_first_team_percent"
-                    style="@style/TextView.Pretendard.SemiBold.12"
+                    style="@style/TextView.Pretendard.Medium.16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:elevation="8dp"
                     android:includeFontPadding="false"
-                    android:textColor="@android:color/white"
                     android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.firstTeamStatus.percentage)}"
+                    android:textColor="@android:color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_first_team_name"
+
                     app:layout_constraintStart_toStartOf="@+id/tv_first_team_name"
                     app:layout_constraintTop_toBottomOf="@id/tv_first_team_name"
                     tools:text="16%" />
@@ -170,33 +196,32 @@
 
                 <TextView
                     android:id="@+id/tv_second_team_name"
-                    style="@style/TextView.Pretendard.Bold.20"
+                    style="@style/TextView.Esamanru.Bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="6dp"
+                    android:layout_marginEnd="20dp"
                     android:elevation="8dp"
                     android:includeFontPadding="false"
                     android:text="@{stadiumStatsUiModel.secondTeamStatus.teamName}"
                     android:textColor="@android:color/white"
+                    android:textSize="22sp"
                     app:layout_constraintBottom_toTopOf="@id/tv_second_team_percent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/guideline_split"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_chainStyle="packed"
                     tools:text="키움" />
 
                 <TextView
                     android:id="@+id/tv_second_team_percent"
-                    style="@style/TextView.Pretendard.SemiBold.12"
+                    style="@style/TextView.Pretendard.Medium.16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:elevation="8dp"
                     android:includeFontPadding="false"
-                    android:textColor="@android:color/white"
                     android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.secondTeamStatus.percentage)}"
+                    android:textColor="@android:color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/tv_second_team_name"
-                    app:layout_constraintStart_toStartOf="@+id/tv_second_team_name"
                     app:layout_constraintTop_toBottomOf="@id/tv_second_team_name"
                     tools:text="16%" />
 
