--- a/android/app/src/main/res/drawable/chart_divider_trapezoid_left.xml
+++ b/android/app/src/main/res/drawable/chart_divider_trapezoid_left.xml
@@ -1,11 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
+    android:width="30dp"
     android:height="40dp"
-    android:viewportWidth="20"
+    android:viewportWidth="30"
     android:viewportHeight="40">
 
     <path
         android:fillColor="#000000"
-        android:pathData="M0,0 L20,0 L0,40 Z"/>
+        android:pathData="M30,0 L0,0 L0,40 L2,40 Z"/>
 </vector>
